[gd_scene load_steps=8 format=3 uid="uid://dqoie45rsj0c5"]

[ext_resource type="Script" path="res://scripts/npc.gd" id="1_43uab"]
[ext_resource type="Texture2D" uid="uid://ssiw7tj6uvtj" path="res://sprites/characters/cats.png" id="1_btp74"]
[ext_resource type="Script" path="res://scripts/Label.gd" id="3_l5bow"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xy545"]
radius = 6.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5a2cj"]
atlas = ExtResource("1_btp74")
region = Rect2(96, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_aqn47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a2cj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l8egn"]
radius = 23.0

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_43uab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 7)
shape = SubResource("CapsuleShape2D_xy545")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aqn47")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 7)
shape = SubResource("CircleShape2D_l8egn")

[node name="Label" type="Label" parent="."]
offset_left = -73.0
offset_top = -34.0
offset_right = 81.0
offset_bottom = -11.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "\"Press E to interact\""
script = ExtResource("3_l5bow")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
